--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -10,7 +10,7 @@ $enable-rounded: false;
 // }
 
 #app{
-    height: 100%;
+    height:100%;
 }
 #map {
     height: 100%;
@@ -18,32 +18,76 @@ $enable-rounded: false;
 .main-content{
     height: 100%;
     background: url(./../images/boxed-bg.png) repeat;
-
     hr{
         margin-top: 0.5rem;
         margin-bottom: 0.5rem;
     }
     .card.driver-routes{
         border-style: dashed;
+        // background-color: rgba(255, 255, 255, 0.8);
+        &:hover{
+            // div.route-actions{
+            //     visibility: visible;
+            // }
+            // .report{
+            //     visibility: visible;
+            // }
+        }
+        div.route-details{
+            border-left: 2px solid rgb(221, 221, 221);
+            padding-left: 0.5rem;
+            margin-top: 0.5rem;
+        }
+        
+        div.route-actions{
+            .report{
+                visibility: hidden;
+            }
+            a{
+                &:hover{
+                    text-decoration: none;
+                }
+                &:not(:last-child){
+                    margin-right:1rem;
+                }
+                font-weight: bold;
+            }
+        }
+        
     }
+
+    
 
 }
 .content {
     height: 100%;
     background: url(./../images/bg.jpg) center center no-repeat;
     background-size: cover;
-
     .card{
         // background: rgba(255, 255, 255, 0.8); 
         margin-top:1rem;
+        
         img.card-img-top{
             padding:10px;
         }
     }
 
 }
+
+.breadcrumb.registration{
+    .breadcrumb-item + .breadcrumb-item::before{
+        content: ">";
+    }
+    .breadcrumb-item{
+        cursor: default;
+        &:hover{
+            text-decoration: none;
+        }
+    }
+}
+
 .form-control-feedback, .form-text{
-font-size: 0.8rem;
+    font-size: 0.8rem;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
